k8s/apps/arr-stack/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr-stack
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: node-role/worker
                  operator: In
                  values: ["true"]

      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:6.4.4
          ports:
            - containerPort: &port 7878
              name: http

          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: media-root
              mountPath: /data

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /ping
              port: *port
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ping
              port: *port
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media-root
          persistentVolumeClaim:
            claimName: media-root
