k8s/apps/arr-stack/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain radarr.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: arr-stack-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: radarr-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: radarr
                port:
                  number: 7878
            path: /
            pathType: Prefix
